--- a/documents/service-open.html
+++ b/documents/service-open.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<title>Имидж-лаборатория "ПЕРСОНА"</title>
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-	<link rel="stylesheet" href="/css/my-bootstrap.css">
-	<link rel="stylesheet" href="/css/slick-theme.css">
-	<link rel="stylesheet" href="/css/style.css">
-	<link rel="stylesheet" href="/css/media.css">
+	<link rel="stylesheet" href="../css/my-bootstrap.css">
+	<link rel="stylesheet" href="../css/slick-theme.css">
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/media.css">
 </head>
 <body>
 	<header class="header position-relative">
@@ -39,7 +39,7 @@
 		</div>
 		<div class="header-bottom d-flex justify-content-between align-items-center position-relative mx-auto">
 			<a href="#" class="header__logo">
-				<img src="/img/logo.png" alt="logo">
+				<img src="../img/logo.png" alt="logo">
 				<p class="text-center">имидж-лаборатория твоего стиля</p>
 			</a>
 			<div class="header-services d-none d-lg-flex justify-content-between">
@@ -475,7 +475,7 @@
 
 	<footer class="footer d-flex">
 		<div class="container d-flex align-items-center justify-content-md-between justify-content-center flex-wrap">
-			<a href="#"><img src="/img/footer-logo.png" alt="logo" class="footer__logo"></a>
+			<a href="#"><img src="../img/footer-logo.png" alt="logo" class="footer__logo"></a>
 			<address class="address d-flex justify-content-between">
 				<div class="address-half">
 					<a href="tel:+7 499 213-13-13" class="address__item"><i class="icon-tel"></i><span>+7 499 213-13-13</span></a>
@@ -502,9 +502,9 @@
 			</div>
 		</div>
 	</footer>
-	<script src="/script/jquery.js"></script>
-	<script src="/script/slick.min.js"></script>
-	<script src="/script/script.js"></script>
+	<script src="../script/jquery.js"></script>
+	<script src="../script/slick.min.js"></script>
+	<script src="../script/script.js"></script>
 	<script>
 		APP.specialistsSliderBtn = $('.specialists-slider__button');
 		APP.specialistsSliderSwitch = $('.specialists-tabs__item');
