--- a/documents/service-open.html
+++ b/documents/service-open.html
@@ -144,7 +144,7 @@
 			<button class="standart-btn standart-btn_big service__btn">записаться к мастеру</button>
 		</section>
 		<div class="services-container container">
-			<h1 class="services__title title-m">Категории и цены</h1>
+			<h1 class="services__title services__title_small title-m">Категории и цены</h1>
 			<ul class="services-list">
 				<li class="services-item w-100 d-flex justify-content-between">
 						<span class="services__name">Женская стрижка</span>
@@ -195,9 +195,9 @@
 			<div class="specialists-tabs d-flex justify-content-between">
 				<div class="specialists-dropdown d-flex d-md-none flex-column">
 					<div class="specialists-dropdown__current d-flex justify-content-between align-items-center"><span>Коломна</span><i class="icon-dropdown"></i> </div>
+					<span class="specialists-dropdown__item d-flex align-items-center justify-content-between current" data-city="Kolomna">Коломна <i class="icon-check"></i></span>
 					<span class="specialists-dropdown__item d-flex align-items-center justify-content-between" data-city="Voskresensk">Воскресенск <i class="icon-check"></i></span>
 					<span class="specialists-dropdown__item d-flex align-items-center justify-content-between" data-city="Egorievsk">Егорьевск <i class="icon-check"></i></span>
-					<span class="specialists-dropdown__item d-flex align-items-center justify-content-between current" data-city="Kolomna">Коломна <i class="icon-check"></i></span>
 				</div>
 				<span class="specialists-tabs__item d-none d-md-block current" data-city="Kolomna">Коломна</span>
 				<span class="specialists-tabs__item d-none d-md-block" data-city="Voskresensk">Воскресенск</span>
@@ -591,6 +591,5 @@
 		})
 		
 	</script>
-	
 </body>
 </html>
