--- a/documents/services.html
+++ b/documents/services.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<title>Имидж-лаборатория "ПЕРСОНА"</title>
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-	<link rel="stylesheet" href="/css/my-bootstrap.css">
-	<link rel="stylesheet" href="/css/slick-theme.css">
-	<link rel="stylesheet" href="/css/style.css">
-	<link rel="stylesheet" href="/css/media.css">
+	<link rel="stylesheet" href="../css/my-bootstrap.css">
+	<link rel="stylesheet" href="../css/slick-theme.css">
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/media.css">
 </head>
 <body>
 	<header class="header position-relative">
@@ -487,8 +487,8 @@
 			</div>
 		</div>
 	</footer>
-	<script src="/script/jquery.js"></script>
-	<script src="/script/slick.min.js"></script>
-	<script src="/script/script.js"></script>
+	<script src="../script/jquery.js"></script>
+	<script src="../script/slick.min.js"></script>
+	<script src="../script/script.js"></script>
 </body>
 </html>
